--- a/styles/styles/mystyle.css
+++ b/styles/styles/mystyle.css
@@ -66,4 +66,7 @@ footer, .btn-outline-primary {
     .carousel-indicators {
         display: none;
     }
+    .bgvideo {
+	display: none;
+    }
 }
